--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -20,18 +20,18 @@
     <th>Harga</th>
     <th>Deskripsi</th>
     <th>Penjual</th>
-    <th>Waktu</th>
+    <th>Tanggal</th>
   </tr>
 
   {% comment %} Berikut cara memperlihatkan data mood di bawah baris ini 
   {% endcomment %} 
-  {% for product_entry in product_entries %}
+  {% for product in product_entries %}
   <tr>
-    <td>{{product_entry.name}}</td>
-    <td>{{product_entry.price}}</td>
-    <td>{{product_entry.description}}</td>
-    <td>{{product_entry.seller}}</td>
-    <td>{{product_entry.time}}</td>
+    <td>{{product.name}}</td>
+    <td>{{product.price}}</td>
+    <td>{{product.description}}</td>
+    <td>{{product.seller}}</td>
+    <td>{{product.time}}</td>
   </tr>
   {% endfor %}
 </table>
@@ -39,7 +39,7 @@
 
 <br />
 
-<a href="{% url 'main:create_product_entry' %}">
+<a href="{% url 'main:create_product' %}">
   <button>Add Product</button>
 </a>
 
